--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -5,7 +5,7 @@
           "title": "Hello, World!"
         },
         "fetch": {
-          "title": "Your IP is"
+          "title": "Your offers are"
         }
       }
     }
