--- a/public/locales/pl/translations.json
+++ b/public/locales/pl/translations.json
@@ -5,7 +5,7 @@
         "title": "Witaj, Świecie!"
       },
       "fetch": {
-        "title": "Twoje IP to"
+        "title": "Twoje oferty to"
       }
     }
   }
