FE - Komponent formularza - Imię
* PRODPFIP-90 Initial, create NameInput component for AddOfferForm

* PRODPFIP-90 Added some validation and EN translations

* FE - Komponent formularza - Wyszukiwarka

* PRODPFIP-97 Create Offer search form component with input

* PRODPFIP-97 Add pattern to clean written phrase of special characters

* PRODPFIP-97 Create component with submit button

* PRODPFIP-97 Add checking if written phrase has more than one character

* PRODPFIP-97 Add translation of Offer search form

* FE - Stworzenie ekranu wyszukiwania usług

* search feature complited

* Replace npm with yarn (#5)

* Code review fix

* search feature complited

* Code review fix

* eslint fix

* file names fix

* PRODPFIP-97 Create Offer search form component with input

* PRODPFIP-97 Add pattern to clean written phrase of special characters

* PRODPFIP-97 Create component with submit button

* PRODPFIP-97 Add checking if written phrase has more than one character

* PRODPFIP-97 Add translation of Offer search form

* PRODPFIP-97 Refactor after add eslint

* PRODPFIP-97 Integrate Search Form with Search Screen

* PRODPFIP-97 Refactoring of SearchInput component:

* PRODFIP-97 Add styles for Offer search form

* FE - Przygotowanie struktury HTML

* PRODPFIP-40 Prepare form HTML structure

* FE - Stworzenie ekranu wyszukiwania usług

* search feature complited

* Replace npm with yarn (#5)

* Code review fix

* search feature complited

* Code review fix

* eslint fix

* file names fix

* PRODPFIP-40 Add error message class

* PRODPFIP-40 Prepare form HTML structure

* PRODPFIP-40 Add error message class

* PRODPFIP-40 Move Form to components

* PRODPFIP-40 Use logo component in form screen

* PRODPFIP-40 Delete unnecessary prefixes

* PRODPFIP-90 Rename NameInput->FirstNameInput, move to UI/FirstNameInput/

* PRODPFIP-90 Initial, create NameInput component for AddOfferForm

* PRODPFIP-90 A

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -1,20 +1,29 @@
 {
-    "screens": {
-      "examples": {
-        "hello": {
-          "title": "Hello, World!"
-        },
-        "fetch": {
-          "title": "Your offers are"
-        }
+  "screens": {
+    "examples": {
+      "hello": {
+        "title": "Hello, World!"
+      },
+      "fetch": {
+        "title": "Your offers are"
       }
+    }
+  },
+  "components": {
+    "searchForm" : {
+      "button": "Szukaj",
+      "input": "Wpisz szukaną usługę",
+      "lengthError": "Wpisana fraza jest za krótka"        
     },
-    "components": {
-      "searchForm" : {
-        "button": "Search",
-        "input": "Enter the service",
-        "lengthError": "The phrase you are looking for is too short"
+    "UI": {
+      "FirstNameInput":{
+        "name": "Name *",
+        "errorEmptyField": "Field can not be empty",
+        "errorMaxLength": "The name should contain at most 20 characters",
+        "errorMinLength": "The name should contain at least 3 characters",
+        "errorOnlyAlpha": "The name must consist only of letters"
       }
     }
   }
+}
   
