FE - Komponent wyszukiwarki - Lista
* PRODPFIP-98 create search results components and test screen component

* PRODPFIP-98 create search results components and test screen component

* PRODPFIP-98 conflict resolution

* PRODPFIP-98 removed package-lock.json

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -1,19 +1,13 @@
 {
-  "screens": {
-    "examples": {
-      "hello": {
-        "title": "Hello, World!"
-      },
-      "fetch": {
-        "title": "Your offers are"
-      }
-    }
-  },
   "components": {
     "searchForm" : {
       "button": "Szukaj",
       "input": "Wpisz szukaną usługę",
       "lengthError": "Wpisana fraza jest za krótka"
+    },
+    "searchResults": {
+      "header": "Shop me",
+      "resultsTitle": "Search results"
     },
     "UI": {
       "FirstNameInput":{
