--- a/public/locales/pl/translations.json
+++ b/public/locales/pl/translations.json
@@ -25,6 +25,11 @@
         "errorEmptyField": "Pole nie może być puste",
         "errorEmailRegex": "Podaj poprawny adres e-mail"
       }
+    },
+    "offer": {
+      "add": {
+        "addOfferText": "Dodaj ofertę"
+      }
     }
   }
 }
