--- a/public/locales/pl/translations.json
+++ b/public/locales/pl/translations.json
@@ -24,6 +24,11 @@
         "name": "E-mail *",
         "errorEmptyField": "Pole nie może być puste",
         "errorEmailRegex": "Podaj poprawny adres e-mail"
+      },
+      "PhoneInput": {
+        "name": "Telefon *",
+        "errorEmptyField": "Pole nie może być puste",
+        "errorPhoneRegex": "Podaj poprawny numer telefonu np. 500500500 lub 914646464"
       }
     },
     "offer": {
