FE - Komponent formularza - O mnie

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -22,6 +22,11 @@
         "errorEmptyField": "Field can not be empty",
         "errorEmailRegex": "Please enter a valid email address"
       },
+      "AboutMeTextarea": {
+        "name": "About me",
+        "errorEmptyField": "Field can not be empty",
+        "errorMaxLength": "This field should contain at most 800 characters"
+      },
       "PhoneInput": {
         "name": "Phone number *",
         "errorEmptyField": "Field can not be empty",
