--- a/public/locales/pl/translations.json
+++ b/public/locales/pl/translations.json
@@ -25,6 +25,11 @@
         "errorEmptyField": "Pole nie może być puste",
         "errorEmailRegex": "Podaj poprawny adres e-mail"
       },
+      "AboutMeTextarea": {
+        "name": "O mnie",
+        "errorEmptyField": "Pole nie może być puste",
+        "errorMaxLength": "W polu można umieścić co najwyżej 800 znaków"
+      },
       "PhoneInput": {
         "name": "Telefon *",
         "errorEmptyField": "Pole nie może być puste",
