--- a/public/locales/pl/translations.json
+++ b/public/locales/pl/translations.json
@@ -25,6 +25,9 @@
         "errorEmptyField": "Pole nie może być puste",
         "errorEmailRegex": "Podaj poprawny adres e-mail"
       },
+      "OfferInput": {
+        "errorMessage": "Pole wymagane!"
+      },
       "AboutMeTextarea": {
         "name": "O mnie",
         "errorEmptyField": "Pole nie może być puste",
@@ -43,4 +46,3 @@
     }
   }
 }
-
