FE - Stworzenie ekranu dodawania oferty (poprawki)
* PRODPFIP-83 Created AddNewOffer screen allows to redirect to another screen, eventually AddNewOfferForm

* Added i18n translation

* feature/PRODPFIP-83 fixed issues // navigating to ScreenAddForm not working

* fixed navigation link

* default test

* final commit

* PRODPFIP-83 --added href property for Link component  --classNames now rely on BEM Methodology  --constant font not defined yet

--- a/public/locales/pl/translations.json
+++ b/public/locales/pl/translations.json
@@ -47,6 +47,11 @@
       "add": {
         "addOfferText": "Dodaj ofertę"
       }
+    },
+    "offer": {
+      "add": {
+        "addOfferText": "Dodaj ofertę"
+      }
     }
   }
 }
