--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -36,6 +36,11 @@
         "errorEmptyField": "Field can not be empty",
         "errorPhoneRegex": "Please enter a valid phone number e.g. 500500500 lub 914646464"
       }
+    },
+    "offer": {
+      "add": {
+        "addOfferText": "Add offer"
+      }
     }
   }
 }
