--- a/public/locales/pl/translations.json
+++ b/public/locales/pl/translations.json
@@ -10,6 +10,28 @@
       "resultsTitle": "Wyniki wyszukiwania"
     },
     "UI": {
+      "categorySelect": {
+        "name": "Kategoria *",
+        "errorEmptyField": "Pole wymagane!",
+        "categoryOptions": {
+          "architecture": "Budowa",
+          "garden": "Ogród",
+          "workshop-services": "Usługi Warszatatowe",
+          "transport": "Transport",
+          "photography": "Fotografia",
+          "graphics": "Grafika",
+          "marketing-and-advertising": "Marketing i Reklama",
+          "programming": "Programowanie",
+          "bookkeeping": "Księgowość",
+          "law": "Prawo",
+          "translations": "Tłumaczenia",
+          "company-and-office": "Firma i Biuro",
+          "repair-and-service": "Naprawa i Serwis",
+          "housework": "Prace Domowe",
+          "tutoring": "Korepetycje",
+          "bands-and-music": "Zespoły i Muzyka",
+          "others": "Inne"
+        }
       "TitleInput": {
         "errorEmptyField": "Pole wymagane!",
         "warningMaxLength": "Tytuł nie powinien być dłuższy niż 30 znaków"
