--validation fixes-made sense to call checkValidity from parent component then isValid submit form (#30)
FE - Komponent formularza - Tytuł (poprawki)

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -35,8 +35,10 @@
       },
       "FirstNameInput":{
       "TitleInput": {
+        "name": "Title Offer *",
         "errorEmptyField": "This field is required!",
-        "warningMaxLength": "The title should contains at most 30 characters"
+        "errorMaxLength": "The title should contains at most 30 characters",
+        "errorMinLength": "The title should contains at least 3 characters"
       },
       "FirstNameInput": {
         "name": "Name *",
