FE - Obsługa braku wyników i połączenie komponentów wyszukiwania
* Connect search componetsand support for no results

* resolved warnings in translations file

* updated name folder SearchResults, modified validPhrases in SearchInput

--- a/public/locales/pl/translations.json
+++ b/public/locales/pl/translations.json
@@ -5,9 +5,11 @@
       "input": "Wpisz szukaną usługę",
       "lengthError": "Wpisana fraza jest za krótka"
     },
-    "searchResults": {
-      "header": "Shop me",
+    "foundSearchResults": {
       "resultsTitle": "Wyniki wyszukiwania"
+    },
+    "noSearchResults" : {
+      "noResultsTitle": "Brak wyników wyszukiwania."
     },
     "UI": {
       "categorySelect": {
