FE - Przygotowanie struktury HTML - Poprawki
* PRODPFIP-84 Create Form HTML Structure - corrections

* PRODPFIP-84 Change colors of form styles

* PRODPFIP-84 Refactor PriceInput

* PRODPFIP-84 Refactor OfferInput

* PRODPFIP-84 Delete unused onBlur

--- a/public/locales/pl/translations.json
+++ b/public/locales/pl/translations.json
@@ -8,6 +8,20 @@
     "foundSearchResults": {
       "resultsTitle": "Wyniki wyszukiwania"
     },
+    "add": {
+      "form": {
+        "title": "Dodaj Ofertę",
+        "fieldsetTitle": "Zdefiniuj Oferowane Pakiety Usług",
+        "caption": "*Pola wymagane",
+        "currency": "zł",
+        "offerBasicLabel": "Podstawowy *",
+        "offerAdditionalLabel": "Rozszerzony",
+        "offerExtraLabel": "Ekstra",
+        "offerBasicPlaceholder": "Podstawowa Usługa",
+        "offerAdditionalPlaceholder": "Rozszerzona Usługa",
+        "offerExtraPlaceholder": "Ekstra Usługa"
+      }
+    },
     "noSearchResults" : {
       "noResultsTitle": "Brak wyników wyszukiwania."
     },
@@ -49,7 +63,8 @@
         "errorOnlyAlpha": "Imię musi się składać wyłącznie z liter"
       },
       "PriceInput":{
-        "errorMessage": "Pole wymagane!"
+        "errorMessage": "Pole wymagane!",
+        "label": "Cena"
       },
       "EmailInput": {
         "name": "E-mail *",
