FE - Walidacja pól ofert (#63)
* PRODPFIP-115 Add logic to set price field required after filling the offer description

* PRODPFIP-115 styles and translations fixes

* PRODPFIP-115 Fix bugs

* PRODPFIP-175 Bug - raz wyłączona blokada opisu usługi nie włącza się ponownie

* PRODPFIP-175 Bug - Fix spelling in a method name

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -15,12 +15,13 @@
         "fieldsetTitle": "Define Your Service Packages",
         "caption": "* Required fields",
         "currency": "zł",
-        "offerBasicLabel": "Basic *",
-        "offerAdditionalLabel": "Additional",
+        "offerBaseLabel": "Base *",
+        "offerExtendedLabel": "Extended",
         "offerExtraLabel": "Extra",
-        "offerBasicPlaceholder": "Basic Service",
-        "offerAdditionalPlaceholder": "Additional Service",
-        "offerExtraPlaceholder": "Extra Service"
+        "offerBasePlaceholder": "Base Service Description",
+        "offerExtendedPlaceholder": "Extended Service Description",
+        "offerExtraPlaceholder": "Extra Service Description",
+        "submitButton": "Add Offer"
       }
     },
     "noSearchResults": {
@@ -51,7 +52,7 @@
         }
       },
       "titleInput": {
-        "name": "Title Offer *",
+        "name": "Offer Title *",
         "errorEmptyField": "This field is required!",
         "errorMaxLength": "The title should contains at most 30 characters",
         "errorMinLength": "The title should contains at least 3 characters"
@@ -75,6 +76,12 @@
         "name": "Phone number *",
         "errorEmptyField": "This field is required",
         "errorPhoneRegex": "Please enter a valid phone number"
+      },
+      "priceInput": {
+        "errorEmptyField": "This field is required"
+      },
+      "offerTextarea": {
+        "errorEmptyField": "This field is required"
       },
       "add": {
         "addOfferText": "Add offer"
