--- a/public/locales/pl/translations.json
+++ b/public/locales/pl/translations.json
@@ -15,12 +15,13 @@
         "fieldsetTitle": "Zdefiniuj Oferowane Pakiety Usług",
         "caption": "*Pola wymagane",
         "currency": "zł",
-        "offerBasicLabel": "Podstawowy *",
-        "offerAdditionalLabel": "Rozszerzony",
+        "offerBaseLabel": "Podstawowy *",
+        "offerExtendedLabel": "Rozszerzony",
         "offerExtraLabel": "Ekstra",
-        "offerBasicPlaceholder": "Podstawowa Usługa",
-        "offerAdditionalPlaceholder": "Rozszerzona Usługa",
-        "offerExtraPlaceholder": "Ekstra Usługa"
+        "offerBasePlaceholder": "Podstawowa Usługa",
+        "offerExtendedPlaceholder": "Rozszerzona Usługa",
+        "offerExtraPlaceholder": "Ekstra Usługa",
+        "submitButton": "Dodaj Ofertę"
       }
     },
     "noSearchResults" : {
@@ -75,6 +76,12 @@
         "name": "Telefon *",
         "errorEmptyField": "Pole wymagane",
         "errorPhoneRegex": "Podaj poprawny numer telefonu"
+      },
+      "priceInput": {
+        "errorEmptyField": "Pole wymagane"
+      },
+      "offerTextarea": {
+        "errorEmptyField": "Pole wymagane"
       },
       "add": {
         "addOfferText": "Dodaj ofertę"
