FE - Dodanie przycisku "logowanie" do ekranu startowego (#68)
* PRODPFIP-158 Add logIn button to homepage

* Move add-offer button to navigation

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -85,6 +85,9 @@
       },
       "add": {
         "addOfferText": "Add offer"
+      },
+      "loginButton": {
+        "label": "Log In"
       }
     }
   }
