--- a/public/locales/pl/translations.json
+++ b/public/locales/pl/translations.json
@@ -85,6 +85,9 @@
       },
       "add": {
         "addOfferText": "Dodaj ofertę"
+      },
+      "loginButton": {
+        "label": "Logowanie"
       }
     }
   }
