FE- Stworzenie struktury HTML ekranu logowania i rejestracji (#69)
* PRODPFIP-156 Create HTML structure for login&signup screen

* PRODPFIP-156 Change path to login$signup screen

* Fix spelling in numberError translation

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -4,7 +4,7 @@
       "button": "Search",
       "input": "Enter the service",
       "lengthError": "Enter longer phrase",
-      "numberError": "Phrase can't cotain only digits"
+      "numberError": "Phrase can't contain only digits"
     },
     "foundSearchResults": {
       "resultsTitle": "Wyniki wyszukiwania"
@@ -26,6 +26,19 @@
     },
     "noSearchResults": {
       "noResultsTitle": "No results have been found match your criteria."
+    },
+    "login": {
+      "login": {
+        "emailInputLabel": "E-mail:",
+        "passwordInputLabel": "Password:",
+        "submitButtonLabel": "Log In"
+      },
+      "signup": {
+        "firstNameInputLabel": "First Name:",
+        "lastNameInputLabel": "Last Name:",
+        "emailInputLabel": "E-mail:",
+        "submitButtonLabel": "Sign Up"
+      }
     },
     "UI": {
       "categorySelect": {
