Feature/prodpfip 173 - rozszerzony formularz rejestracji - walidacja (#104)
* Update Register screen title to use react-i18next translate

* Fix bug requested by QA in TitleInput to allow at most 30 characters in add form title

* Fix bug requested by QA in FirstNameInput 30 characters -> 20 characters allowed

* Fix bug requested by QA in PhoneInput - delete validation rule to only allow 8 or 9 numbers in phone number - due to requirements

* Update PhoneInput - remove commented code

* Add refs to inputs in RegisterForm and InvoiceInput Group; Add clearing error message element to onChange handler in GenericInput

* Add register form validation; Add initial structure for POST data; Update translation;

* Fix bug in validation function; Clean up;

* Update translations and validation in PhoneInput and TitleInput due to QA request; Change name of function returning invoice data; Remove commented code from PersonalDataConfirm.css

--- a/public/locales/pl/translations.json
+++ b/public/locales/pl/translations.json
@@ -94,7 +94,7 @@
         "name": "Tytuł Oferty *",
         "errorEmptyField": "Pole wymagane",
         "errorMinLength": "Zbyt mała liczba znaków",
-        "errorIllegalCharacters": "Niedozwolone znaki",
+        "errorIllegalCharacters": "Niedozwolone znaki specjalne",
         "errorOnlyAlpha": "Pole może zawierać tylko litery"
       },
       "firstNameInput": {
@@ -115,8 +115,8 @@
       "phoneInput": {
         "name": "Telefon *",
         "errorEmptyField": "Pole wymagane",
-        "errorPhoneRegex": "Podaj poprawny numer telefonu",
-        "errorOnlyNumeric": "Pole może zawierać tylko cyfry"
+        "errorPhoneRegex": "Zbyt mała liczba znaków",
+        "errorOnlyNumeric": "Pole powinno zawierać tylko cyfry"
       },
       "priceInput": {
         "errorEmptyField": "Pole wymagane"
