Fix/PRODPFIP 177 Change Price display (#110)
* Fix bug PRODPFIP-177 Change price display

* Change flag in form errorMessage

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -15,7 +15,6 @@
         "title": "Add offer",
         "fieldsetTitle": "Define Your Service Packages",
         "caption": "* Required fields",
-        "currency": "zł",
         "offerBaseLabel": "Base *",
         "offerExtendedLabel": "Extended",
         "offerExtraLabel": "Extra",
@@ -129,7 +128,8 @@
         "errorOnlyNumeric": "This field should contain only numbers"
       },
       "priceInput": {
-        "errorEmptyField": "This field is required"
+        "errorEmptyField": "This field is required",
+        "currency": "zł"
       },
       "offerTextarea": {
         "errorEmptyField": "This field is required"
