Obsługa wysłania danych z formularza rejestracji (#116)
* Add Register form POST handling ; Add successful registration screen to Register Form; Update translation of phone error meassage where characters other than numbers are entered; Fix phone input to allow enter 10 characters

* Update setFormData function to get rid of redundant data

--- a/public/locales/pl/translations.json
+++ b/public/locales/pl/translations.json
@@ -125,7 +125,7 @@
         "name": "Telefon *",
         "errorEmptyField": "Pole wymagane",
         "errorPhoneRegex": "Zbyt mała liczba znaków",
-        "errorOnlyNumeric": "Pole powinno zawierać tylko cyfry"
+        "errorOnlyNumeric": "Pole powinno zawierać jedynie cyfry"
       },
       "priceInput": {
         "errorEmptyField": "Pole wymagane",
