PRODPFIP-241 validate inputs data in signup form (#125)
* PRODPFIP-241 validate inputs data in signup form

* Fix maxlength in register form

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -142,5 +142,15 @@
         "labelLogged": "Logout"
       }
     }
+  },
+  "helpers": {
+    "validator": {
+      "errorEmptyField": "This field is required",
+      "errorMinLength": "Too few characters",
+      "errorIllegalCharacters": "Illegal characters",
+      "errorOnlyAlpha": "This field should contain only letters",
+      "errorOnlyNumeric": "This field should contain only numbers",
+      "errorEmailRegex": "Please enter a valid email address",
+    }
   }
 }
