--- a/public/locales/pl/translations.json
+++ b/public/locales/pl/translations.json
@@ -142,5 +142,15 @@
         "labelLogged": "Wyloguj"
       }
     }
+  },
+  "helpers": {
+    "validator": {
+      "errorEmptyField": "Pole wymagane",
+      "errorMinLength": "Zbyt mała liczba znaków",
+      "errorIllegalCharacters": "Niedozwolone znaki specjalne",
+      "errorOnlyAlpha": "Pole może zawierać tylko litery",
+      "errorOnlyNumeric": "Pole powinno zawierać jedynie cyfry",
+      "errorEmailRegex": "Podaj poprawny adres e-mail"
+    }
   }
 }
