FE - PRODPFIP-242&243 Add City and voivodeship options to add offer form, validation (#144)
* Replace different input components with GenericInput; Add classNames for label,span and input in GenericInput; Add default props to GenericInput not to affect other components using GenericInput - temporary

* Add City input and placeholder for Voivodeship select; Change CategorySelect to GenericSelect that can be used as universal fetch - select component; Add styling to Form, GenericSelect, GenericInput components; Add couple of validation functions; Add placeholder template for incoming voivodeship data in translation files; Remove unused functions from Form

* Update path to new GenericSelect component in test file

* Replace placeholder for voivodeship select with real one (yet to test); Add error class prop for GenericInput; Replace translateKey with name in GenericInput option value; Update translation file for voivodeships list to match BE implementation; Update css files for GenericInput and GenericSelect.

* Remove unused input components and translation paths; Add missing translations, update outdated ones; Add missing 'ę' letter to patterns in validation functions; Update GenericInput and GenericSelect css files

* Change add-offer data json model to avoid sending empty keys

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -8,10 +8,14 @@
       "numberError": "Phrase can't contain only digits"
     },
     "foundSearchResults": {
-      "resultsTitle": "Wyniki wyszukiwania"
+      "resultsTitle": "Search results"
     },
     "add": {
       "form": {
+        "name": "Offer title *",
+        "firstName": "First Name *",
+        "phone": "Phone number *",
+        "email": "E-mail *",
         "title": "Add offer",
         "fieldsetTitle": "Define Your Service Packages",
         "caption": "* Required fields",
@@ -22,7 +26,8 @@
         "offerExtendedPlaceholder": "Extended Service Description",
         "offerExtraPlaceholder": "Extra Service Description",
         "submitButton": "Add Offer",
-        "errorMessage": "* Please fill out all required fields"
+        "errorMessage": "* Please fill out all required fields",
+        "city": "City *"
       },
       "successMessage": {
         "text": "The offer has been successfully added"
@@ -99,33 +104,30 @@
           "others": "Others"
         }
       },
-      "titleInput": {
-        "name": "Offer Title *",
-        "errorEmptyField": "This field is required!",
-        "errorMinLength": "Too few characters",
-        "errorIllegalCharacters": "Illegal characters",
-        "errorOnlyAlpha": "This field should contain only letters"
-      },
-      "firstNameInput": {
-        "name": "Name *",
-        "errorEmptyField": "This field is required",
-        "errorMinLength": "Too few characters",
-        "errorOnlyAlpha": "This field should contain only letters"
-      },
-      "emailInput": {
-        "name": "E-mail *",
-        "errorEmptyField": "This field is required",
-        "errorEmailRegex": "Please enter a valid email address"
+      "voivodeship": {
+        "name": "Voivodeship *",
+        "list": {
+          "LowerSilesian":"LowerSilesian",
+          "KuyavianPomeranian":"KuyavianPomeranian",
+          "Lublin":"Lublin",
+          "Lubusz":"Lubusz",
+          "Lodz":"Lodz",
+          "LesserPoland":"LesserPoland",
+          "Masovian":"Masovian",
+          "Opole":"Opole",
+          "Subcarpathian":"Subcarpathian",
+          "Podlasie":"Podlasie",
+          "Pomeranian":"Pomeranian",
+          "Silesian":"Silesian",
+          "Swietokrzyskie":"Swietokrzyskie",
+          "WarmianMasurian":"WarmianMasurian",
+          "GreaterPoland":"GreaterPoland",
+          "WesternPomeranian":"WesternPomeranian"
+        }
       },
       "aboutMeTextarea": {
         "name": "About me",
         "errorEmptyField": "This field is required"
-      },
-      "phoneInput": {
-        "name": "Phone number *",
-        "errorEmptyField": "This field is required",
-        "errorPhoneRegex": "Too few characters",
-        "errorOnlyNumeric": "This field should contain only numbers"
       },
       "priceInput": {
         "errorEmptyField": "This field is required",
@@ -150,7 +152,7 @@
       "errorIllegalCharacters": "Illegal characters",
       "errorOnlyAlpha": "This field should contain only letters",
       "errorOnlyNumeric": "This field should contain only numbers",
-      "errorEmailRegex": "Please enter a valid email address",
+      "errorEmailRegex": "Please enter a valid email address"
     }
   }
 }
