--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -159,7 +159,9 @@
       "errorIllegalCharacters": "Illegal characters",
       "errorOnlyAlpha": "This field should contain only letters",
       "errorOnlyNumeric": "This field should contain only numbers",
-      "errorEmailRegex": "Please enter a valid email address"
+      "errorEmailRegex": "Please enter a valid email address",
+      "errorPasswordRequirements": "Password must contain at least one capital letter and one number",
+      "errorInvalidPassword": "Invalid password"
     }
   }
 }
