--- a/public/locales/pl/translations.json
+++ b/public/locales/pl/translations.json
@@ -156,10 +156,12 @@
     "validator": {
       "errorEmptyField": "Pole wymagane",
       "errorMinLength": "Zbyt mała liczba znaków",
-      "errorIllegalCharacters": "Niedozwolone znaki specjalne",
+      "errorIllegalCharacters": "Niedozwolone znaki",
       "errorOnlyAlpha": "Pole może zawierać tylko litery",
       "errorOnlyNumeric": "Pole powinno zawierać jedynie cyfry",
-      "errorEmailRegex": "Podaj poprawny adres e-mail"
+      "errorEmailRegex": "Podaj poprawny adres e-mail",
+      "errorPasswordRequirements": "Hasło musi zawierać co najmniej jedną wielką literę i jedną cyfrę",
+      "errorInvalidPassword": "Niepoprawne hasło"
     }
   }
 }
