fix/voivodeships in RegisterForm (#153)
* voivodeships in RegisterForm

* styles fix

* translation

* mising colon

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -72,7 +72,8 @@
         "personalDataProcessing": "I hereby agree for processing my personal data by ShopMe",
         "invoiceDataLabel": "Invoice data",
         "successRegisterMessage": "Registration has been completed successfully",
-        "anEmailIsExisting": "The user with the entered e-mail address already exists"
+        "anEmailIsExisting": "The user with the entered e-mail address already exists",
+        "voivodeships": "Voivodeship:"
       }
     },
     "offerDetails": {
