--- a/public/locales/pl/translations.json
+++ b/public/locales/pl/translations.json
@@ -72,7 +72,8 @@
         "personalDataProcessing": "Wyrażam zgodę na przetwarzanie moich danych osobowych przez ShopMe",
         "invoiceDataLabel": "Dane do faktury",
         "successRegisterMessage": "Rejestracja zakończona pomyślnie",
-        "anEmailIsExisting": "Użytkownik o podanym adresie e-mail juz istnieje"
+        "anEmailIsExisting": "Użytkownik o podanym adresie e-mail juz istnieje",
+        "voivodeships": "Województwo:"
       }
     },
     "offerDetails": {
