PRODPFIP-309 Inputs Validation in Register Form (#164)
* Delete unnecessary wrapper

* Add some inputs validation

* Change Inputs order in Register form

* Move InvoiceInputGroup to Register Folder

* Style Fix

--- a/public/locales/pl/translations.json
+++ b/public/locales/pl/translations.json
@@ -61,6 +61,7 @@
         "bankAccountInputLabel": "Nr konta bankowego:",
         "streetInputLabel": "Ulica:",
         "houseNumberInputLabel": "Nr domu:",
+        "cityInputLabel": "Miasto:",
         "localityInputLabel": "Miejscowość:",
         "zipCodeInputLabel": "Kod pocztowy:",
         "companyNameInputLabel": "Nazwa firmy:",
@@ -72,7 +73,7 @@
         "personalDataProcessing": "Wyrażam zgodę na przetwarzanie moich danych osobowych przez ShopMe",
         "invoiceDataLabel": "Dane do faktury",
         "successRegisterMessage": "Rejestracja zakończona pomyślnie",
-        "anEmailIsExisting": "Użytkownik o podanym adresie e-mail juz istnieje",
+        "anEmailIsExisting": "Użytkownik o podanym adresie e-mail już istnieje",
         "voivodeships": "Województwo:"
       }
     },
